--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,28 @@
 
 # The name of your website.
-name: Holo Alfa
+name: Tech a Look
 
-description:
+description: If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips & Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading...
 
   # Description of your site. This will show up in google.
-  meta: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content.
+  meta: Srinivas Kumar: Articles, Learning's, Code Snippets, Knowledge base, Personal Experiences and some fun stuff
+  # meta: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content. #Commented by Srini20200305
 
   # Description of your site. This will show up on the front page.
-  subtitle: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content. <a href="https://github.com/stijnvc/holo-alfa">&lt;/&gt; on Github</a>.
+  subtitle: Peekaboo into the Tech World
 
 author:
-  name: Dr. Jekyll # Change this!
+  name: Srinivas Kumar # Change this!
 
   # Necessary for contact page
-  email: your@email.com # Change this!
+  email: srinivasakumar.a@gmail.com # Change this!
 
   # Optional text (html) to display after author name. Leave empty if you don't
   # want it.
   info:
 
-url: http://steinvc.github.io
-baseurl: "/holo-alfa"
+url: https://www.srinivasakumar.com
+baseurl: ""
 
 # language attribute in <html> element.
 lang: en
@@ -35,7 +36,7 @@ lang: en
 # If you want to show the subtitle anywhere else than the front page, use
 # {% include subtitle.html %} to include it anywhere you want.
 show-subtitle: true
-display-social-icons: false
+display-social-icons: true
 # If you want social links to open in a new tab, set this as true
 social-icons-open-newtab: true
 
@@ -77,7 +78,7 @@ nav-breaking-point: 520px
 paginate: 3
 
 # Display links for the previous and next post on post pages.
-display-next-prev-post: false
+display-next-prev-post: true
 
 # Leave empty if you don't want comments on post pages.
 disqus-shortname:
