--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Tech a Look
 description: If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips & Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading...
 
   # Description of your site. This will show up in google.
-  meta: Srinivas Kumar: Articles, Learnings, Code Snippets, Knowledge base, Personal Experiences and some fun stuff
+  meta: Srinivas Kumar - Articles, Learnings, Code Snippets, Knowledge base, Personal Experiences and some fun stuff
   # meta: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content. #Commented by Srini20200305
 
   # Description of your site. This will show up on the front page.
