--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # The name of your website.
-name: Tech a Look.
+name: Tech A Look
 
 description: If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips & Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading...
 
