--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # The name of your website.
 name: Tech A Look
 
-description: If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips & Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading...
+description: If you are Techie like me, you shall find this blog posts useful to you. You shall find Useful Articles, Programming Language Tips and Tricks, Code Snippets, Knowledge Base, My Personal Experiences and some fun stuff. Happy Reading
 
   # Description of your site. This will show up in google.
-  meta: Srinivas Kumar - Articles, Learnings, Code Snippets, Knowledge base, Personal Experiences and some fun stuff
+  meta: Srinivas Kumar Articles, Learnings, Code Snippets, Knowledge base, Personal Experiences and some fun stuff
   # meta: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content. #Commented by Srini20200305
 
   # Description of your site. This will show up on the front page.
