--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   # want it.
   info:
 
-url: https://www.srinivasakumar.com
+url: srinivasakumar.com
 baseurl: ""
 
 # language attribute in <html> element.
